// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WITH STYLES CONTEXT NATIVE, with provider 1`] = `
<div>
  <div
    data="REACTANY"
  >
    Hallo
  </div>
  <div
    data="REACTANY"
  >
    <div
      data="REACTANY"
      id="1"
    />
  </div>
</div>
`;

exports[`WITH STYLES CONTEXT NATIVE, without provider 1`] = `
<div>
  <div
    data="REACTANY"
  >
    Hallo
  </div>
  <div
    data="REACTANY"
  >
    <div
      data="REACTANY"
      id="123"
    />
  </div>
</div>
`;

exports[`WITH STYLES CONTEXT WEB, with provider 1`] = `
<div>
  <div
    data="REACTANY"
  >
    Hallo
  </div>
  <div
    data="REACTANY"
  >
    <div
      data="REACTANY"
      id="1"
    />
  </div>
</div>
`;

exports[`WITH STYLES CONTEXT WEB, without provider 1`] = `
<div>
  <div
    data="REACTANY"
  >
    Hallo
  </div>
  <div
    data="REACTANY"
  >
    <div
      data="REACTANY"
      id="123"
    />
  </div>
</div>
`;
